# Investment-automation

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
frontend/: index.html
src/automation_crew/: crew.py  gui.py  main.py
src/automation_crew/config/: agents.yaml  tasks.yaml
src/automation_crew/tools/: __init__.py  finance_tools.py  news_tools.py
tests/: test_crew_structure.py  test_finance_tools.py  test_integration_smoke.py  test_news_tools.py  test_output_contract.py  test_startup_validation.py
