[project]
name = "automation_crew"
version = "0.1.0"
description = "automation_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "exa-py>=1.14.20",
    "gradio>=5.17.0",
    "litellm>=1.63.11",
    "yfinance>=0.2.54"
]

[project.scripts]
automation_crew = "automation_crew.main:run"
run_crew = "automation_crew.main:run"
run_gui = "automation_crew.gui:launch"
train = "automation_crew.main:train"
replay = "automation_crew.main:replay"
test = "automation_crew.main:test"
run_with_trigger = "automation_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
